fixing broken images

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <div class="container-fluid">
 
-        <nav class="navbar navbar-fixed-top navbar-light bg-light">
+        <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="../assets/images/brewerysearch-logo.png" height="60" alt="" id="logo">
+                <img src="./assets/images/brewerysearch-logo.png" height="60" alt="" id="logo">
             </a>
         </nav>
 
