--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             id="searchState">
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-warning hvr-sweep-to-right" id="searchButton">Search</button>
+                        <button type="button" class="btn btn-warning hvr-sweep-to-right" id="searchButton">Search<i class="fas fa-search"></i></button>
                     </div>
                 </div>
             </form>
